--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fcc-learn-npm-package-json",
+  "description": "A project that does something awesome",
   "version": "0.0.1",
   "dependencies": {
     "express": "^4.14.0"
