--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/AshleyWilkey/boilerplate-npm.git"
-  }
+  },
+  "keywords": [
+    "freecodecamp"
+  ]
 }
