--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "description": "A project that does something awesome",
   "version": "0.0.1",
   "dependencies": {
-    "express": "^4.14.0",
-    "@freecodecamp/example": "^1.2.13"
+    "express": "^4.14.0"
   },
   "main": "server.js",
   "scripts": {
